# Appointments.Api.Tenant/Models/BranchOfficeCreatedResponse.cs
@@ -1,0 +1,3 @@
+﻿namespace Appointments.Api.Tenant.Models;
+
+public sealed record BranchOfficeCreatedResponse(Guid BranchOfficeId);
