# Appointments.Common.Application/FindRequest.cs
@@ -4,6 +4,16 @@ using MediatR;
 
 namespace Appointments.Common.Application;
 
+public static class FindRequest
+{
+    public static class PageSize
+    {
+        public const int Min = 1;
+        public const int Default = 10;
+        public const int Max = 100;
+    }
+}
+
 public abstract record FindRequest<T>(
     int PageIndex,
     int PageSize,
@@ -13,16 +23,13 @@ public abstract record FindRequest<T>(
 
 public sealed class FindRequestValidator<T> : AbstractValidator<FindRequest<T>>
 {
-    private const int _minPageSize = 1;
-    private const int _maxPageSize = 100;
-
     public FindRequestValidator()
     {
         RuleFor(x => x.PageIndex)
             .GreaterThanOrEqualTo(0);
 
         RuleFor(x => x.PageSize)
-            .GreaterThanOrEqualTo(_minPageSize)
-            .LessThanOrEqualTo(_maxPageSize);
+            .GreaterThanOrEqualTo(FindRequest.PageSize.Min)
+            .LessThanOrEqualTo(FindRequest.PageSize.Max);
     }
 }
