# Appointments.Common.Domain/Models/PagedResult.cs
@@ -4,4 +4,16 @@ public sealed record PagedResult<T>(
     int PageIndex,
     int PageSize,
     long TotalCount,
-    IReadOnlyList<T> Results);
+    IReadOnlyList<T> Results)
+{
+    public PagedResult<U> Map<U>(Func<T, U> mapFunction)
+    {
+        return new PagedResult<U>(
+            PageIndex,
+            PageSize,
+            TotalCount,
+            Results
+                .Select(mapFunction)
+                .ToList());
+    }
+}
